--- a/MyApplication/app/src/main/res/layout/act_webview_transfer_page.xml
+++ b/MyApplication/app/src/main/res/layout/act_webview_transfer_page.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <WebView
+    <!--<WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"/>
+        android:visibility="invisible"/>-->
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
