--- a/MyApplication/app/src/main/res/layout/act_webview_transfer_page.xml
+++ b/MyApplication/app/src/main/res/layout/act_webview_transfer_page.xml
@@ -16,74 +16,81 @@
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/webView1"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="webView1" />
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/webView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView2" />
+                <Button
+                    android:id="@+id/webView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView1" />
 
-            <Button
-                android:id="@+id/webView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView3" />
+                <Button
+                    android:id="@+id/webView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView2" />
 
-            <Button
-                android:id="@+id/webView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView4" />
+                <Button
+                    android:id="@+id/webView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView3" />
 
-            <Button
-                android:id="@+id/webView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView5" />
+                <Button
+                    android:id="@+id/webView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView4" />
 
-            <Button
-                android:id="@+id/webView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView6" />
+                <Button
+                    android:id="@+id/webView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView5" />
 
-            <Button
-                android:id="@+id/webView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView7" />
+                <Button
+                    android:id="@+id/webView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView6" />
 
-            <Button
-                android:id="@+id/webView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView8" />
+                <Button
+                    android:id="@+id/webView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView7" />
 
-            <Button
-                android:id="@+id/webView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webVie9" />
+                <Button
+                    android:id="@+id/webView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView8" />
 
-            <Button
-                android:id="@+id/webView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="webView10" />
+                <Button
+                    android:id="@+id/webView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webVie9" />
+
+                <Button
+                    android:id="@+id/webView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="webView10" />
 
 
+            </LinearLayout>
 
-        </LinearLayout>
+        </FrameLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
