--- a/MyApplication/app/src/main/res/layout/act_test.xml
+++ b/MyApplication/app/src/main/res/layout/act_test.xml
@@ -57,5 +57,13 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/yc_red4"
+            android:textColor="@color/white"
+            android:layout_gravity="bottom"/>
     </FrameLayout>
 </layout>
