--- a/MyApplication/app/src/main/res/layout/act_anr.xml
+++ b/MyApplication/app/src/main/res/layout/act_anr.xml
@@ -8,5 +8,14 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/yc_red4"
+        android:textColor="@color/white"
+        android:layout_gravity="bottom"/>
 </android.support.constraint.ConstraintLayout>
