--- a/MyApplication/app/src/main/res/layout/act_process.xml
+++ b/MyApplication/app/src/main/res/layout/act_process.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,4 +10,3 @@
             android:layout_height="wrap_content"
             />
     </FrameLayout>
-</layout>
