--- a/MyApplication/app/src/main/res/layout/act_reflect.xml
+++ b/MyApplication/app/src/main/res/layout/act_reflect.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -24,5 +24,3 @@
             android:text="start"
             android:onClick="onStartTest"/>
     </LinearLayout>
-
-</layout>
