--- a/MyApplication/app/src/main/res/layout/act_touch_event.xml
+++ b/MyApplication/app/src/main/res/layout/act_touch_event.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.gaofei.app.widget.MyFrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,5 +52,3 @@
                 android:text="view4"/>
         </com.gaofei.app.widget.MyLinearLayout>
     </com.gaofei.app.widget.MyFrameLayout>
-
-</layout>
