--- a/MyApplication/app2/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app2/src/main/res/layout/activity_main.xml
@@ -13,6 +13,11 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="40dp" />
+
+        <SurfaceView
+            android:id="@+id/surface"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </RelativeLayout>
 
 </FrameLayout>
