--- a/MyApplication/app/src/main/res/layout/activity_webview.xml
+++ b/MyApplication/app/src/main/res/layout/activity_webview.xml
@@ -28,7 +28,7 @@
 
     </LinearLayout>
 
-    <com.tencent.smtt.sdk.WebView
+    <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
