--- a/MyApplication/app/src/main/res/layout/act_broadcast_reveiver.xml
+++ b/MyApplication/app/src/main/res/layout/act_broadcast_reveiver.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
-    </RelativeLayout>
-</layout>
+        android:layout_height="40dp" />
+</RelativeLayout>
