--- a/MyApplication/android4/src/main/res/layout/activity_main.xml
+++ b/MyApplication/android4/src/main/res/layout/activity_main.xml
@@ -11,5 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
-
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"/>
 </FrameLayout>
