--- a/MyApplication/app/src/main/res/layout/act_touch_event.xml
+++ b/MyApplication/app/src/main/res/layout/act_touch_event.xml
@@ -4,13 +4,13 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.gaofei.app.widget.MyLinearLayout
             android:id="@+id/ll1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="300dp"
             android:paddingTop="20dp"
             android:layout_marginTop="20dp"
             android:orientation="vertical">
