--- a/MyApplication/app/src/main/res/layout/act_anr.xml
+++ b/MyApplication/app/src/main/res/layout/act_anr.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="40dp"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/text"
