--- a/MyApplication/app/src/main/res/layout/act_test.xml
+++ b/MyApplication/app/src/main/res/layout/act_test.xml
@@ -61,7 +61,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.gaofei.app.widget.MyTextView
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
