--- a/MyApplication/app/src/main/res/layout/act_canvas.xml
+++ b/MyApplication/app/src/main/res/layout/act_canvas.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.gaofei.app.widget.MyConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/gifDrawalbe"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:tag="MyFrameLayout"
+        android:orientation="vertical">
 
-        android:src="@drawable/app_icon" />
+        <ImageView
+            android:id="@+id/textImage"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/test1"/>
+
+        <ImageView
+            android:id="@+id/textImage2"
+            android:layout_width="200dp"
+            android:layout_height="320dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/test1"/>
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</com.gaofei.app.widget.MyConstraintLayout>
