--- a/MyApplication/android4/src/main/res/values/styles.xml
+++ b/MyApplication/android4/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <!-- Base application theme. -->
-
+    <style name="AppThemeTransparent" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
 </resources>
