--- a/MyApplication/app/src/main/res/layout/recycler_view_item.xml
+++ b/MyApplication/app/src/main/res/layout/recycler_view_item.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <com.gaofei.app.widget.MyTextView
         android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="80dp"
+        android:layout_weight="1"
         android:background="#f6f6"
-        android:paddingLeft="10dp"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e8e8e8"/>
-</RelativeLayout>
+        android:paddingLeft="10dp" />
+
+    <com.gaofei.app.widget.MyView
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_weight="1"
+        android:background="#e8e8e8" />
+
+</LinearLayout>
