--- a/MyApplication/app/src/main/res/layout/act_recycler_cache.xml
+++ b/MyApplication/app/src/main/res/layout/act_recycler_cache.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
-    <com.gaofei.app.widget.MyNestedScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,15 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <com.gaofei.app.widget.MyRecyclerView
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:background="#e6e6e6"
-                android:fadingEdge="vertical"
-                android:requiresFadingEdge="vertical"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:overScrollMode="never"
+                android:scrollbars="none"/>
 
 
 
@@ -95,7 +95,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </com.gaofei.app.widget.MyNestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.gaofei.app.widget.MyTextView
         android:id="@+id/button"
