--- a/MyApplication/app/src/main/res/layout/act_view_pager.xml
+++ b/MyApplication/app/src/main/res/layout/act_view_pager.xml
@@ -7,8 +7,8 @@
         android:orientation="vertical">
 
 
-        <androidx.viewpager.widget.ViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="200dp"></androidx.viewpager.widget.ViewPager>
+            android:layout_height="200dp"></androidx.viewpager2.widget.ViewPager2>
     </LinearLayout>
