--- a/MyApplication/app/src/main/res/layout/act_slot_machine.xml
+++ b/MyApplication/app/src/main/res/layout/act_slot_machine.xml
@@ -19,10 +19,13 @@
 
     <TextView
         android:id="@+id/start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:background="@color/black"
         android:layout_marginBottom="20dp"
         android:text="start"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
