--- a/MyApplication/app/src/main/res/layout/act_recycler_cache.xml
+++ b/MyApplication/app/src/main/res/layout/act_recycler_cache.xml
@@ -20,7 +20,7 @@
             <com.gaofei.app.widget.MyRecyclerView
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:overScrollMode="never"
