--- a/MyApplication/app/src/main/res/layout/recycler_view_item.xml
+++ b/MyApplication/app/src/main/res/layout/recycler_view_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.gaofei.app.widget.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -19,4 +19,4 @@
         android:layout_weight="1"
         android:background="#e8e8e8" />
 
-</LinearLayout>
+</com.gaofei.app.widget.MyLinearLayout>
